tests/fail/zero_rate.stderr
error: number would be zero for non-zero type
 --> tests/fail/zero_rate.rs:9:34
  |
9 |     let _wave = sine_wave!(rate: 0);
  |                                  ^
